@@ -764,8 +764,10 @@ typedef void (*RUBY_DATA_FUNC)(void*);
 
 VALUE rb_data_object_alloc(VALUE,void*,RUBY_DATA_FUNC,RUBY_DATA_FUNC);
 VALUE rb_data_typed_object_alloc(VALUE klass, void *datap, const rb_data_type_t *);
+int rb_typed_struct_is_kind_of(VALUE, const rb_data_type_t *);
 void *rb_check_typed_struct(VALUE, const rb_data_type_t *);
 #define Check_TypedStruct(v,t) rb_check_typed_struct((VALUE)(v),t)
+#define RUBY_TYPED_DEFAULT_FREE ((void (*)(void *))-1)
 
 #define Data_Wrap_Struct(klass,mark,free,sval)\
     rb_data_object_alloc(klass,sval,(RUBY_DATA_FUNC)mark,(RUBY_DATA_FUNC)free)
